increase heap memory for build process

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,6 @@ android.useAndroidX=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=true
 android.nonFinalResIds=true
+
+# the build process may run out of heap memory with the default memory
+org.gradle.jvmargs=-Xmx4G
