add PA updater as submodule

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,5 @@ google-services.json
 
 # love-android specific
 app/src/main/assets/
-app/src/embed/assets/
+# replaced with submodule of the app
+# app/src/embed/assets/
