--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = app/src/main/cpp/megasource
 	url = https://github.com/love2d/megasource
 	branch = 12.x
+[submodule "app/src/embed/assets"]
+	path = app/src/embed/assets
+	url = https://github.com/Endaris/panel-attack-updater.git
