fix app name being used in the wrong field

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # * Use `app.name` if your app name doesn't contain any non-ANSI characters.
 # * Otherwise, convert your app name to UTF-8 byte array, comma delimited, and put
 #   it in `app.name_byte_array`
-app.name_byte_array=Panel Attack
+app.name=Panel Attack
 
 app.application_id=com.panelattack.android
 app.orientation=landscape
